<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#477891"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/arrow_icon"
        style="@style/top_icon"
        android:background="@null"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <ImageButton
        android:id="@+id/edit_icon"
        style="@style/top_icon"
        android:background="@null"
        android:src="@drawable/_104221_kebab_kebab_menu_menu_navigation_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/rounded_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:foreground="@drawable/grediant"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="1" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ali_zainy"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/rounded_image"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_const"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rounded_image">

        <TextView
            android:id="@+id/acc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_space"
            android:text="@string/account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/copy_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_content_copy_24"
            app:layout_constraintBottom_toBottomOf="@id/tap_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/number_text" />

        <TextView
            android:id="@+id/number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_07806525224"
            android:textColor="@color/primary_color_text"
            android:textSize="@dimen/large_text"
            app:layout_constraintStart_toStartOf="@id/acc_text"
            app:layout_constraintTop_toBottomOf="@id/acc_text" />

        <TextView
            android:id="@+id/tap_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/phone_number"
            android:textColor="@color/tertiary"
            android:textSize="@dimen/tertiary_text_size"
            app:layout_constraintStart_toStartOf="@id/number_text"
            app:layout_constraintTop_toBottomOf="@id/number_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_space"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_qr_code_24"
            app:layout_constraintBottom_toBottomOf="@id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_id" />

        <View
            android:id="@+id/line1"
            style="@style/line"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tap_text" />

        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_space"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/ali_zainy"
            android:textColor="@color/primary_color_text"
            android:textSize="@dimen/large_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/user_name"
            android:textColor="@color/tertiary"
            android:textSize="@dimen/tertiary_text_size"
            app:layout_constraintStart_toStartOf="@id/user_id"
            app:layout_constraintTop_toBottomOf="@id/user_id" />

        <View
            android:id="@+id/large_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_space"
            android:layout_marginTop="@dimen/small_space"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_space"
            android:text="@string/settings"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/large_line" />

        <ImageView
            android:id="@+id/chat_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_space"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_chat_bubble_outline_24"
            app:layout_constraintStart_toStartOf="@id/settings"
            app:layout_constraintTop_toBottomOf="@id/settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_space"
            android:layout_marginTop="@dimen/large_space"
            android:text="@string/chat_settings"
            android:textColor="@color/primary_color_text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/chat_icon"
            app:layout_constraintTop_toBottomOf="@id/settings" />

        <View
            android:id="@+id/line2"
            style="@style/line"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chat_icon" />

        <ImageView
            android:id="@+id/lock_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_lock_open_24"
            app:layout_constraintStart_toStartOf="@id/line2"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_space"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/privacy_and_security"
            android:textColor="@color/primary_color_text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/lock_icon"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <View
            android:id="@+id/line3"
            style="@style/line"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chat_icon" />

        <ImageView
            android:id="@+id/noti_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_notifications_none_24"
            app:layout_constraintStart_toStartOf="@id/line4"
            app:layout_constraintTop_toBottomOf="@id/line4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_space"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/notification_and_sounds"
            android:textColor="@color/primary_color_text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/noti_icon"
            app:layout_constraintTop_toBottomOf="@id/line4" />

        <View
            android:id="@+id/line4"
            style="@style/line"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lock_icon" />

        <ImageView
            android:id="@+id/storage_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_space"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_timelapse_24"
            app:layout_constraintStart_toStartOf="@id/line5"
            app:layout_constraintTop_toBottomOf="@id/line5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_space"
            android:layout_marginTop="@dimen/normal_space"
            android:text="@string/data_and_storage"
            android:textColor="@color/primary_color_text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/storage_icon"
            app:layout_constraintTop_toBottomOf="@id/line5" />

        <View
            android:id="@+id/line5"
            style="@style/line"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noti_icon" />

        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--            android:id="@+id/floatingActionButton"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:backgroundTint="@color/primary_text"-->
        <!--            android:contentDescription="@string/todo"-->
        <!--            android:elevation="3dp"-->
        <!--            android:layout_marginTop="32dp"-->
        <!--            android:src="@drawable/baseline_chat_bubble_outline_24"-->
        <!--            app:layout_constraintBottom_toTopOf="@id/copy_icon"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_marginEnd="24dp" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>